--- a/style/style.css
+++ b/style/style.css
@@ -135,3 +135,11 @@
   font-size: 20px;
   line-height: 24px;
 }
+
+#color-btn.green {
+  background-color: #0eff1a;
+}
+
+#color-btn.purple {
+  background-color: #f093f0;
+}
